# ocr_translate-easyocr

./: pyproject.toml
.github/workflows/: cd.yml  ci.yml
ocr_translate_easyocr/: __init__.py  plugin.py
tests/: conftest.py  settings.py  test_easyocr.py
tests/test_easyocr/: test_intersection_merge.yml
